added pygame requirement

--- a/agent.ipynb
+++ b/agent.ipynb
@@ -105,7 +105,7 @@
         }
       ],
       "source": [
-        "%pip install gymnasium tensorflow numpy matplotlib Cope"
+        "%pip install gymnasium tensorflow numpy matplotlib Cope pygame"
       ]
     },
     {
