fixed dependancies again

--- a/agent.ipynb
+++ b/agent.ipynb
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -90,13 +90,77 @@
           "output_type": "stream",
           "text": [
             "Defaulting to user installation because normal site-packages is not writeable\n",
-            "Collecting polars\n",
-            "  Obtaining dependency information for polars from https://files.pythonhosted.org/packages/2a/b6/89628dbea4624ba0c0c4d960441645b4fa77f830ee3dbbe62bccf4cb0a87/polars-0.20.7-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata\n",
-            "  Downloading polars-0.20.7-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (15 kB)\n",
-            "Downloading polars-0.20.7-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (26.7 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m26.7/26.7 MB\u001b[0m \u001b[31m82.2 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:09\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: polars\n",
-            "Successfully installed polars-0.20.7\n",
+            "Requirement already satisfied: gymnasium in /home/anastasia/.local/lib/python3.11/site-packages (0.29.1)\n",
+            "Requirement already satisfied: tensorflow in /home/anastasia/.local/lib/python3.11/site-packages (2.15.0.post1)\n",
+            "Requirement already satisfied: numpy in /home/anastasia/.local/lib/python3.11/site-packages (1.26.3)\n",
+            "Requirement already satisfied: matplotlib in /home/anastasia/.local/lib/python3.11/site-packages (3.8.2)\n",
+            "Requirement already satisfied: Cope in /home/anastasia/.local/lib/python3.11/site-packages (2.3.1)\n",
+            "Collecting Cope\n",
+            "  Obtaining dependency information for Cope from https://files.pythonhosted.org/packages/df/fb/e09a8d1df528fba21c8c6106b5774b52929486cdb64fde2b2115d4a99244/cope-2.4.0-py2.py3-none-any.whl.metadata\n",
+            "  Downloading cope-2.4.0-py2.py3-none-any.whl.metadata (254 bytes)\n",
+            "Requirement already satisfied: pygame in /home/anastasia/.local/lib/python3.11/site-packages (2.5.2)\n",
+            "Requirement already satisfied: cloudpickle>=1.2.0 in /home/anastasia/.local/lib/python3.11/site-packages (from gymnasium) (3.0.0)\n",
+            "Requirement already satisfied: typing-extensions>=4.3.0 in /home/anastasia/.local/lib/python3.11/site-packages (from gymnasium) (4.9.0)\n",
+            "Requirement already satisfied: farama-notifications>=0.0.1 in /home/anastasia/.local/lib/python3.11/site-packages (from gymnasium) (0.0.4)\n",
+            "Requirement already satisfied: absl-py>=1.0.0 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (2.1.0)\n",
+            "Requirement already satisfied: astunparse>=1.6.0 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (1.6.3)\n",
+            "Requirement already satisfied: flatbuffers>=23.5.26 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (23.5.26)\n",
+            "Requirement already satisfied: gast!=0.5.0,!=0.5.1,!=0.5.2,>=0.2.1 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (0.5.4)\n",
+            "Requirement already satisfied: google-pasta>=0.1.1 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (0.2.0)\n",
+            "Requirement already satisfied: h5py>=2.9.0 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (3.10.0)\n",
+            "Requirement already satisfied: libclang>=13.0.0 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (16.0.6)\n",
+            "Requirement already satisfied: ml-dtypes~=0.2.0 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (0.2.0)\n",
+            "Requirement already satisfied: opt-einsum>=2.3.2 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (3.3.0)\n",
+            "Requirement already satisfied: packaging in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (23.2)\n",
+            "Requirement already satisfied: protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<5.0.0dev,>=3.20.3 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (4.23.4)\n",
+            "Requirement already satisfied: setuptools in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (67.7.2)\n",
+            "Requirement already satisfied: six>=1.12.0 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (1.16.0)\n",
+            "Requirement already satisfied: termcolor>=1.1.0 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (2.4.0)\n",
+            "Requirement already satisfied: wrapt<1.15,>=1.11.0 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (1.14.1)\n",
+            "Requirement already satisfied: tensorflow-io-gcs-filesystem>=0.23.1 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (0.35.0)\n",
+            "Requirement already satisfied: grpcio<2.0,>=1.24.3 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (1.60.0)\n",
+            "Requirement already satisfied: tensorboard<2.16,>=2.15 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (2.15.1)\n",
+            "Requirement already satisfied: tensorflow-estimator<2.16,>=2.15.0 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (2.15.0)\n",
+            "Requirement already satisfied: keras<2.16,>=2.15.0 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorflow) (2.15.0)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /home/anastasia/.local/lib/python3.11/site-packages (from matplotlib) (1.2.0)\n",
+            "Requirement already satisfied: cycler>=0.10 in /home/anastasia/.local/lib/python3.11/site-packages (from matplotlib) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /home/anastasia/.local/lib/python3.11/site-packages (from matplotlib) (4.47.2)\n",
+            "Requirement already satisfied: kiwisolver>=1.3.1 in /home/anastasia/.local/lib/python3.11/site-packages (from matplotlib) (1.4.5)\n",
+            "Requirement already satisfied: pillow>=8 in /home/anastasia/.local/lib/python3.11/site-packages (from matplotlib) (10.2.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /home/anastasia/.local/lib/python3.11/site-packages (from matplotlib) (3.1.1)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /home/anastasia/.local/lib/python3.11/site-packages (from matplotlib) (2.8.2)\n",
+            "Requirement already satisfied: rich in /home/anastasia/.local/lib/python3.11/site-packages (from Cope) (13.7.0)\n",
+            "Requirement already satisfied: varname in /home/anastasia/.local/lib/python3.11/site-packages (from Cope) (0.12.2)\n",
+            "Requirement already satisfied: wheel<1.0,>=0.23.0 in /home/anastasia/.local/lib/python3.11/site-packages (from astunparse>=1.6.0->tensorflow) (0.42.0)\n",
+            "Requirement already satisfied: google-auth<3,>=1.6.3 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorboard<2.16,>=2.15->tensorflow) (2.27.0)\n",
+            "Requirement already satisfied: google-auth-oauthlib<2,>=0.5 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorboard<2.16,>=2.15->tensorflow) (1.2.0)\n",
+            "Requirement already satisfied: markdown>=2.6.8 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorboard<2.16,>=2.15->tensorflow) (3.5.2)\n",
+            "Requirement already satisfied: requests<3,>=2.21.0 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorboard<2.16,>=2.15->tensorflow) (2.31.0)\n",
+            "Requirement already satisfied: tensorboard-data-server<0.8.0,>=0.7.0 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorboard<2.16,>=2.15->tensorflow) (0.7.2)\n",
+            "Requirement already satisfied: werkzeug>=1.0.1 in /home/anastasia/.local/lib/python3.11/site-packages (from tensorboard<2.16,>=2.15->tensorflow) (3.0.1)\n",
+            "Requirement already satisfied: markdown-it-py>=2.2.0 in /home/anastasia/.local/lib/python3.11/site-packages (from rich->Cope) (3.0.0)\n",
+            "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /home/anastasia/.local/lib/python3.11/site-packages (from rich->Cope) (2.17.2)\n",
+            "Requirement already satisfied: executing<3.0,>=2.0 in /home/anastasia/.local/lib/python3.11/site-packages (from varname->Cope) (2.0.1)\n",
+            "Requirement already satisfied: cachetools<6.0,>=2.0.0 in /home/anastasia/.local/lib/python3.11/site-packages (from google-auth<3,>=1.6.3->tensorboard<2.16,>=2.15->tensorflow) (5.3.2)\n",
+            "Requirement already satisfied: pyasn1-modules>=0.2.1 in /home/anastasia/.local/lib/python3.11/site-packages (from google-auth<3,>=1.6.3->tensorboard<2.16,>=2.15->tensorflow) (0.3.0)\n",
+            "Requirement already satisfied: rsa<5,>=3.1.4 in /home/anastasia/.local/lib/python3.11/site-packages (from google-auth<3,>=1.6.3->tensorboard<2.16,>=2.15->tensorflow) (4.9)\n",
+            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /home/anastasia/.local/lib/python3.11/site-packages (from google-auth-oauthlib<2,>=0.5->tensorboard<2.16,>=2.15->tensorflow) (1.3.1)\n",
+            "Requirement already satisfied: mdurl~=0.1 in /home/anastasia/.local/lib/python3.11/site-packages (from markdown-it-py>=2.2.0->rich->Cope) (0.1.2)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /home/anastasia/.local/lib/python3.11/site-packages (from requests<3,>=2.21.0->tensorboard<2.16,>=2.15->tensorflow) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /home/anastasia/.local/lib/python3.11/site-packages (from requests<3,>=2.21.0->tensorboard<2.16,>=2.15->tensorflow) (3.6)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/anastasia/.local/lib/python3.11/site-packages (from requests<3,>=2.21.0->tensorboard<2.16,>=2.15->tensorflow) (2.1.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /home/anastasia/.local/lib/python3.11/site-packages (from requests<3,>=2.21.0->tensorboard<2.16,>=2.15->tensorflow) (2023.11.17)\n",
+            "Requirement already satisfied: MarkupSafe>=2.1.1 in /home/anastasia/.local/lib/python3.11/site-packages (from werkzeug>=1.0.1->tensorboard<2.16,>=2.15->tensorflow) (2.1.4)\n",
+            "Requirement already satisfied: pyasn1<0.6.0,>=0.4.6 in /home/anastasia/.local/lib/python3.11/site-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard<2.16,>=2.15->tensorflow) (0.5.1)\n",
+            "Requirement already satisfied: oauthlib>=3.0.0 in /home/anastasia/.local/lib/python3.11/site-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<2,>=0.5->tensorboard<2.16,>=2.15->tensorflow) (3.2.2)\n",
+            "Downloading cope-2.4.0-py2.py3-none-any.whl (74 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m74.2/74.2 kB\u001b[0m \u001b[31m509.9 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: Cope\n",
+            "  Attempting uninstall: Cope\n",
+            "    Found existing installation: Cope 2.3.1\n",
+            "    Uninstalling Cope-2.3.1:\n",
+            "      Successfully uninstalled Cope-2.3.1\n",
+            "Successfully installed Cope-2.4.0\n",
             "\n",
             "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
             "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
@@ -105,7 +169,7 @@
         }
       ],
       "source": [
-        "%pip install gymnasium tensorflow numpy matplotlib Cope pygame"
+        "%pip install --upgrade gymnasium tensorflow numpy matplotlib Cope pygame"
       ]
     },
     {
